load("@rules_python//python:defs.bzl", "py_library")

package(default_visibility = ["//visibility:public"])

py_library(
    name = "all",
    srcs = [],
    data = [],
    deps = [
        ":default",
        ":macro",
        ":news",
        ":ohlvc",
    ],
)

py_library(
    name = "ohlvc",
    srcs = ["ohlvc.py"],
    data = [],
    deps = [
        "//hypertrade/libs/tsfd/datasets:asset",
        "//hypertrade/libs/tsfd/schemas:ohlvc",
        "//hypertrade/libs/tsfd/sources:types",
    ],
)

py_library(
    name = "macro",
    srcs = ["macro.py"],
    data = [],
    deps = [
        "//hypertrade/libs/tsfd/schemas:macro",
        "//hypertrade/libs/tsfd/sources:types",
    ],
)

py_library(
    name = "news",
    srcs = ["news.py"],
    data = [],
    deps = [
        "//hypertrade/libs/tsfd/schemas:news",
        "//hypertrade/libs/tsfd/sources:types",
    ],
)

py_library(
    name = "default",
    srcs = ["default.py"],
    data = [],
    deps = [
        "//hypertrade/libs/tsfd/schemas:default",
        "//hypertrade/libs/tsfd/sources:types",
    ],
)
